# city-of-ann-arbor

./: .env.example  bun.lockb  docker-compose.dev.yml  package.json
ckan/: Dockerfile.dev
ckan/docker-entrypoint.d/: 03_config.sh
ckan/setup/: oauth2_config.yaml
frontend/: .env.example  .gitignore  README.md  bun.lockb  components.json  cypress.config.ts  globals.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: build-manifest.json  trace
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  pages-manifest.json
frontend/ckan-search-portal/: package.json
frontend/lib/: uiUtils.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx  search.tsx  topics.tsx
frontend/styles/: globals.scss
frontend/types/: ckan.ts
src/.cookiecutter_replay/: ckan_extension.json
src/ckanext-ann-arbor/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-ann-arbor/.github/workflows/: test.yml
src/ckanext-ann-arbor/ckanext/ann_arbor/: ckan_dataset.yaml  plugin.py
src/ckanext-ann-arbor/ckanext/ann_arbor/assets/: dataset-type.js  script.js  webassets.yml
src/ckanext-ann-arbor/ckanext/ann_arbor/logic/: auth.py  validators.py
src/ckanext-ann-arbor/ckanext/ann_arbor/logic/action/: create.py  update.py
src/ckanext-ann-arbor/ckanext/ann_arbor/templates/: page.html
src/ckanext-ann-arbor/ckanext/ann_arbor/templates/package/snippets/: package_form.html
src/ckanext-ann-arbor/ckanext/ann_arbor/templates/scheming/display_snippets/: image.html
src/ckanext-ann-arbor/ckanext/ann_arbor/templates/scheming/package/snippets/: additional_info.html
src/ckanext-ann-arbor/ckanext/ann_arbor/tests/: test_plugin.py
src/ckanext-ann-arbor/ckanext/ann_arbor/views/: dataset.py
(+69 files in other folders)
