[metadata]
name = ckanext-ann-arbor
version = 0.0.1
description = Extension for the city of ann arbor open data portal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datopian/ckanext-ann-arbor
author = Datopian
author_email = support@datopian.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             ann_arbor = ckanext.ann_arbor.plugin:AnnArborPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/ann_arbor/i18n/ckanext-ann_arbor.pot
width = 80

[init_catalog]
domain = ckanext-ann_arbor
input_file = ckanext/ann_arbor/i18n/ckanext-ann_arbor.pot
output_dir = ckanext/ann_arbor/i18n

[update_catalog]
domain = ckanext-ann_arbor
input_file = ckanext/ann_arbor/i18n/ckanext-ann_arbor.pot
output_dir = ckanext/ann_arbor/i18n
previous = true

[compile_catalog]
domain = ckanext-ann_arbor
directory = ckanext/ann_arbor/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
